K8S/dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-dns
  namespace: kube-system
  labels:
    k8s-app: kube-dns
spec:
  selector:
    matchLabels:
      k8s-app: kube-dns
  template:
    metadata:
      labels:
        k8s-app: kube-dns
    spec:
      serviceAccountName: kube-dns
      containers:
      - name: coredns
        image: k8s.gcr.io/coredns/coredns:v1.8.4
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "170Mi"
            cpu: "100m"
          requests:
            memory: "70Mi"
            cpu: "50m"
        args: [ "-conf", "/etc/coredns/Corefile" ]
        volumeMounts:
        - name: config-volume
          mountPath: /etc/coredns
          readOnly: true
        - name: dns-cache
          mountPath
