K8S/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: isbn.com
      http:
        paths:
          - path:  /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - path: /book
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          -  path: /cover_image
             pathType: Prefix
             backend:
              service:
                name: backend
                port:
                  number: 5000
